tests/community/submissions/14/SL_tests/TypeError.output.error
Type error at TypeError.sl line 2 col 11: operation "*" not defined for NULL, Number 5
