tests/community/submissions/14/SL_tests/TypeError.sl
function main() {
  println(null() * 5);
}

function null() {

}